crates/cli/tests/snapshots/run_rust_test__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_rust_test.rs
expression: assert.output()
---
▪▪▪▪ cargo generate-lockfile
▪▪▪▪ rust:exitNonZero
stdout
▪▪▪▪ rust:exitNonZero (100ms)
stderr
Error: task_runner::run_failed

  × Task rust:exitNonZero failed to run. View hash details with moon query
  │ hash hash1234.
  ╰─▶ Process cargo failed with a 1 exit code.



