crates/cli/tests/snapshots/run_rust_test__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_rust_test.rs
expression: assert.output()
---
▪▪▪▪ cargo generate-lockfile
▪▪▪▪ rust:exitZero
stdout
▪▪▪▪ rust:exitZero (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



