crates/cli/tests/snapshots/run_rust_test__inherits_moon_env_vars.snap
---
source: crates/cli/tests/run_rust_test.rs
expression: assert.output()
---
▪▪▪▪ cargo generate-lockfile
▪▪▪▪ rust:envVarsMoon
MOON_CACHE=read-write
MOON_CACHE_DIR=<WORKSPACE>/.moon/cache
MOON_HOME=<WORKSPACE>/.moon-home
MOON_LOG=trace
MOON_PROJECT_ID=rust
MOON_PROJECT_ROOT=<WORKSPACE>
MOON_PROJECT_SNAPSHOT=<WORKSPACE>/.moon/cache/states/rust/snapshot.json
MOON_PROJECT_SOURCE=.
MOON_TARGET=rust:envVarsMoon
MOON_TASK_ID=envVarsMoon
MOON_THEME=dark
MOON_WORKING_DIR=<WORKSPACE>
MOON_WORKSPACE_ROOT=<WORKSPACE>
▪▪▪▪ rust:envVarsMoon (100ms)

Tasks: 1 completed
 Time: 100ms
