crates/cli/tests/snapshots/run_rust_test__runs_from_project_root.snap
---
source: crates/cli/tests/run_rust_test.rs
expression: assert.output()
---
▪▪▪▪ rust:runFromProject
<WORKSPACE>
▪▪▪▪ rust:runFromProject (100ms)

Tasks: 1 completed
 Time: 100ms



