crates/cli/tests/snapshots/run_rust_test__runs_standard_script.snap
---
source: crates/cli/tests/run_rust_test.rs
expression: assert.output()
---
▪▪▪▪ cargo generate-lockfile
▪▪▪▪ rust:standard
stdout
▪▪▪▪ rust:standard (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



