crates/cli/tests/snapshots/run_rust_test__sets_env_vars.snap
---
source: crates/cli/tests/run_rust_test.rs
expression: assert.output()
---
▪▪▪▪ rust:envVars
MOON_FOO=abc
MOON_BAR=123
MOON_BAZ=true
▪▪▪▪ rust:envVars (100ms)

Tasks: 1 completed
 Time: 100ms



